--- a/admin_area/css/login.css
+++ b/admin_area/css/login.css
@@ -1,12 +1,12 @@
 body{
     padding-top: 10%;
-    background-color: lightseagreen;
+    background-color: #db001e;
 }
 
 .form-login{
     max-width: 350px;
     padding: 40px;
-    border: 3px #286290 groove;
+    border: 3px #db001e groove;
     border-radius: 20px;
     background: #e9e9e9;
     margin: 0 auto;
@@ -14,7 +14,7 @@ body{
 }
 
 .form-login .form-login-heading{
-    color: #286290;
+    color: #db001e;
     text-align: center;
 }
 
@@ -36,4 +36,13 @@ body{
     margin-bottom: 10px;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
+}
+
+.btn-primary {
+    background-color: #db001e;
+    border-color: #db001e;
+}
+
+.btn-primary:hover{
+    background-color: hotpink;
 }
